// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerOverlay renders Text + Image + Button 1`] = `
Array [
  <div
    className="box smDisplayFlex xsDisplayNone"
  >
    <div
      className="box contentCenter default fit fixed justifyBetween paddingX400 paddingY300 rounding4 shadow smPaddingY400 xsDirectionRow xsDisplayFlex"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 900,
          "position": "fixed",
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "calc(100% - 32px)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem selfCenter"
        >
          <div
            aria-hidden={true}
            className="box"
          >
            <div
              className="Mask rounding2 willChangeTransform"
              style={
                Object {
                  "height": 32,
                  "width": 32,
                }
              }
            >
              <div
                className="box relative"
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "paddingBottom": "100%",
                  }
                }
              >
                <img
                  alt=""
                  className="img"
                  fetchpriority="auto"
                  loading="auto"
                  onError={[Function]}
                  onLoad={[Function]}
                  src="https://i.pinimg.com/474x/b2/55/ed/b255edbf773ffb3985394e6efb9d2a49.jpg"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 justifyBetween xsDirectionRow"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Text, image and button
            </div>
          </div>
          <span
            className="textColorOverrideLight"
          >
            <span
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Saved to
               
              <a
                className="noOutline inheritColor rounding0 inlineBlock tapTransition hoverUnderline noUnderline outlineFocus"
                href="https://www.pinterest.com/search/pins/?q=home%20decor"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                rel=""
              >
                Home decor
              </a>
            </span>
          </span>
        </div>
      </div>
      <div
        className="Flex rowGap400 columnGap400 selfCenter xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            className="box flexWrap marginBottomN100 marginEndN100 marginStartN100 marginTopN100 xsDisplayFlex"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="box smDisplayNone xsDisplayFlex"
  >
    <div
      className="box default fit fixed justifyCenter paddingX400 paddingY300 rounding4 shadow smPaddingY400 xsDirectionColumn xsDisplayFlex"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 348,
          "position": "fixed",
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "calc(100% - 32px)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem selfBaseline"
        >
          <div
            aria-hidden={true}
            className="box"
          >
            <div
              className="Mask rounding2 willChangeTransform"
              style={
                Object {
                  "height": 32,
                  "width": 32,
                }
              }
            >
              <div
                className="box relative"
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "paddingBottom": "100%",
                  }
                }
              >
                <img
                  alt=""
                  className="img"
                  fetchpriority="auto"
                  loading="auto"
                  onError={[Function]}
                  onLoad={[Function]}
                  src="https://i.pinimg.com/474x/b2/55/ed/b255edbf773ffb3985394e6efb9d2a49.jpg"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 justifyBetween xsDirectionRow"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Text, image and button
            </div>
          </div>
          <div
            className="box marginBottom200"
          >
            <span
              className="textColorOverrideLight"
            >
              <span
                className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
              >
                Saved to
                 
                <a
                  className="noOutline inheritColor rounding0 inlineBlock tapTransition hoverUnderline noUnderline outlineFocus"
                  href="https://www.pinterest.com/search/pins/?q=home%20decor"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyPress={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  rel=""
                >
                  Home decor
                </a>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        className="Flex rowGap400 columnGap400 selfEnd xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            className="box flexWrap marginBottomN100 marginEndN100 marginStartN100 marginTopN100 xsDisplayFlex"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`BannerOverlay renders Text + Image 1`] = `
Array [
  <div
    className="box smDisplayFlex xsDisplayNone"
  >
    <div
      className="box contentCenter default fit fixed justifyBetween paddingX400 paddingY300 rounding4 shadow smPaddingY400 xsDirectionRow xsDisplayFlex"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 900,
          "position": "fixed",
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "calc(100% - 32px)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem selfCenter"
        >
          <div
            aria-hidden={true}
            className="box"
          >
            <div
              className="Mask rounding2 willChangeTransform"
              style={
                Object {
                  "height": 32,
                  "width": 32,
                }
              }
            >
              <div
                className="box relative"
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "paddingBottom": "100%",
                  }
                }
              >
                <img
                  alt=""
                  className="img"
                  fetchpriority="auto"
                  loading="auto"
                  onError={[Function]}
                  onLoad={[Function]}
                  src="https://i.pinimg.com/474x/b2/55/ed/b255edbf773ffb3985394e6efb9d2a49.jpg"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 justifyBetween xsDirectionRow"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Text and Image
            </div>
          </div>
          <span
            className="textColorOverrideLight"
          >
            <span
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Saved to
               
              <a
                className="noOutline inheritColor rounding0 inlineBlock tapTransition hoverUnderline noUnderline outlineFocus"
                href="https://www.pinterest.com/search/pins/?q=home%20decor"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                rel=""
              >
                Home decor
              </a>
            </span>
          </span>
        </div>
      </div>
      <div
        className="Flex rowGap400 columnGap400 selfCenter xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            className="box flexWrap marginBottomN100 marginEndN100 marginStartN100 marginTopN100 xsDisplayFlex"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="box smDisplayNone xsDisplayFlex"
  >
    <div
      className="box default fit fixed justifyCenter paddingX400 paddingY300 rounding4 shadow smPaddingY400 xsDirectionColumn xsDisplayFlex"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 348,
          "position": "fixed",
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "calc(100% - 32px)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem selfBaseline"
        >
          <div
            aria-hidden={true}
            className="box"
          >
            <div
              className="Mask rounding2 willChangeTransform"
              style={
                Object {
                  "height": 32,
                  "width": 32,
                }
              }
            >
              <div
                className="box relative"
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "paddingBottom": "100%",
                  }
                }
              >
                <img
                  alt=""
                  className="img"
                  fetchpriority="auto"
                  loading="auto"
                  onError={[Function]}
                  onLoad={[Function]}
                  src="https://i.pinimg.com/474x/b2/55/ed/b255edbf773ffb3985394e6efb9d2a49.jpg"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 justifyBetween xsDirectionRow"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Text and Image
            </div>
          </div>
          <div
            className="box marginBottom200"
          >
            <span
              className="textColorOverrideLight"
            >
              <span
                className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
              >
                Saved to
                 
                <a
                  className="noOutline inheritColor rounding0 inlineBlock tapTransition hoverUnderline noUnderline outlineFocus"
                  href="https://www.pinterest.com/search/pins/?q=home%20decor"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyPress={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  rel=""
                >
                  Home decor
                </a>
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        className="Flex rowGap400 columnGap400 selfEnd xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            className="box flexWrap marginBottomN100 marginEndN100 marginStartN100 marginTopN100 xsDisplayFlex"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`BannerOverlay renders Text only 1`] = `
Array [
  <div
    className="box smDisplayFlex xsDisplayNone"
  >
    <div
      className="box contentCenter default fit fixed justifyBetween paddingX400 paddingY300 rounding4 shadow smPaddingY400 xsDirectionRow xsDisplayFlex"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 900,
          "position": "fixed",
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "calc(100% - 32px)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 justifyBetween xsDirectionRow"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Profile
            </div>
          </div>
          <span
            className="default alignStart breakWord lineClamp Text fontSize300 fontWeightNormal"
            style={
              Object {
                "WebkitLineClamp": 2,
              }
            }
          >
            Same great profile, slightly new look. Learn more?
          </span>
        </div>
      </div>
      <div
        className="Flex rowGap400 columnGap400 selfCenter xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            className="box flexWrap marginBottomN100 marginEndN100 marginStartN100 marginTopN100 xsDisplayFlex"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="box smDisplayNone xsDisplayFlex"
  >
    <div
      className="box default fit fixed justifyCenter paddingX400 paddingY300 rounding4 shadow smPaddingY400 xsDirectionColumn xsDisplayFlex"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 348,
          "position": "fixed",
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "calc(100% - 32px)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 justifyBetween xsDirectionRow"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Profile
            </div>
          </div>
          <div
            className="box marginBottom200"
          >
            <span
              className="default alignStart breakWord lineClamp Text fontSize300 fontWeightNormal"
              style={
                Object {
                  "WebkitLineClamp": 2,
                }
              }
            >
              Same great profile, slightly new look. Learn more?
            </span>
          </div>
        </div>
      </div>
      <div
        className="Flex rowGap400 columnGap400 selfEnd xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            className="box flexWrap marginBottomN100 marginEndN100 marginStartN100 marginTopN100 xsDisplayFlex"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`BannerOverlay renders in desktop device 1`] = `
Array [
  <div
    className="box smDisplayFlex xsDisplayNone"
  >
    <div
      className="box contentCenter default fit fixed justifyBetween paddingX400 paddingY300 rounding4 shadow smPaddingY400 xsDirectionRow xsDisplayFlex"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 900,
          "position": "fixed",
          "top": 15,
          "transform": "translateX(-50%)",
          "width": "calc(100% - 32px)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 justifyBetween xsDirectionRow"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Text and Image
            </div>
          </div>
          <span
            className="default alignStart breakWord lineClamp Text fontSize300 fontWeightNormal"
            style={
              Object {
                "WebkitLineClamp": 2,
              }
            }
          >
            A description
          </span>
        </div>
      </div>
      <div
        className="Flex rowGap400 columnGap400 selfCenter xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            className="box flexWrap marginBottomN100 marginEndN100 marginStartN100 marginTopN100 xsDisplayFlex"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="box smDisplayNone xsDisplayFlex"
  >
    <div
      className="box default fit fixed justifyCenter paddingX400 paddingY300 rounding4 shadow smPaddingY400 xsDirectionColumn xsDisplayFlex"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 348,
          "position": "fixed",
          "top": 15,
          "transform": "translateX(-50%)",
          "width": "calc(100% - 32px)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 justifyBetween xsDirectionRow"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Text and Image
            </div>
          </div>
          <div
            className="box marginBottom200"
          >
            <span
              className="default alignStart breakWord lineClamp Text fontSize300 fontWeightNormal"
              style={
                Object {
                  "WebkitLineClamp": 2,
                }
              }
            >
              A description
            </span>
          </div>
        </div>
      </div>
      <div
        className="Flex rowGap400 columnGap400 selfEnd xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            className="box flexWrap marginBottomN100 marginEndN100 marginStartN100 marginTopN100 xsDisplayFlex"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`BannerOverlay renders in mobile device 1`] = `
Array [
  <div
    className="box smDisplayFlex xsDisplayNone"
  >
    <div
      className="box contentCenter default fit fixed justifyBetween paddingX400 paddingY300 rounding4 shadow smPaddingY400 xsDirectionRow xsDisplayFlex"
      style={
        Object {
          "bottom": 10,
          "left": "50%",
          "maxWidth": 900,
          "position": "fixed",
          "top": "unset",
          "transform": "translateX(-50%)",
          "width": "calc(100% - 32px)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 justifyBetween xsDirectionRow"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Text and Image
            </div>
          </div>
          <span
            className="default alignStart breakWord lineClamp Text fontSize300 fontWeightNormal"
            style={
              Object {
                "WebkitLineClamp": 2,
              }
            }
          >
            A description
          </span>
        </div>
      </div>
      <div
        className="Flex rowGap400 columnGap400 selfCenter xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            className="box flexWrap marginBottomN100 marginEndN100 marginStartN100 marginTopN100 xsDisplayFlex"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="box smDisplayNone xsDisplayFlex"
  >
    <div
      className="box default fit fixed justifyCenter paddingX400 paddingY300 rounding4 shadow smPaddingY400 xsDirectionColumn xsDisplayFlex"
      style={
        Object {
          "bottom": 10,
          "left": "50%",
          "maxWidth": 348,
          "position": "fixed",
          "top": "unset",
          "transform": "translateX(-50%)",
          "width": "calc(100% - 32px)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 justifyBetween xsDirectionRow"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Text and Image
            </div>
          </div>
          <div
            className="box marginBottom200"
          >
            <span
              className="default alignStart breakWord lineClamp Text fontSize300 fontWeightNormal"
              style={
                Object {
                  "WebkitLineClamp": 2,
                }
              }
            >
              A description
            </span>
          </div>
        </div>
      </div>
      <div
        className="Flex rowGap400 columnGap400 selfEnd xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            className="box flexWrap marginBottomN100 marginEndN100 marginStartN100 marginTopN100 xsDisplayFlex"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`BannerOverlay renders in mobile device with reversed offset 1`] = `
Array [
  <div
    className="box smDisplayFlex xsDisplayNone"
  >
    <div
      className="box contentCenter default fit fixed justifyBetween paddingX400 paddingY300 rounding4 shadow smPaddingY400 xsDirectionRow xsDisplayFlex"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 900,
          "position": "fixed",
          "top": 15,
          "transform": "translateX(-50%)",
          "width": "calc(100% - 32px)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 justifyBetween xsDirectionRow"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Text and Image
            </div>
          </div>
          <span
            className="default alignStart breakWord lineClamp Text fontSize300 fontWeightNormal"
            style={
              Object {
                "WebkitLineClamp": 2,
              }
            }
          >
            A description
          </span>
        </div>
      </div>
      <div
        className="Flex rowGap400 columnGap400 selfCenter xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            className="box flexWrap marginBottomN100 marginEndN100 marginStartN100 marginTopN100 xsDisplayFlex"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="box smDisplayNone xsDisplayFlex"
  >
    <div
      className="box default fit fixed justifyCenter paddingX400 paddingY300 rounding4 shadow smPaddingY400 xsDirectionColumn xsDisplayFlex"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 348,
          "position": "fixed",
          "top": 15,
          "transform": "translateX(-50%)",
          "width": "calc(100% - 32px)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow xsItemsCenter"
      >
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 justifyBetween xsDirectionRow"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Text and Image
            </div>
          </div>
          <div
            className="box marginBottom200"
          >
            <span
              className="default alignStart breakWord lineClamp Text fontSize300 fontWeightNormal"
              style={
                Object {
                  "WebkitLineClamp": 2,
                }
              }
            >
              A description
            </span>
          </div>
        </div>
      </div>
      <div
        className="Flex rowGap400 columnGap400 selfEnd xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            className="box flexWrap marginBottomN100 marginEndN100 marginStartN100 marginTopN100 xsDisplayFlex"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;
